# social_media_tracker

./: .gitignore  .streamlitignore  DEPLOYMENT_ALTERNATIVES.md  Dockerfile  Dockerfile.huggingface  PROJECT_DOCUMENTATION.md  README.md  STREAMLIT_DEPLOYMENT.md  cmds.txt  connection_test.py  debug_dashboard.py  debug_dashboard_error.py  debug_data_issues.py  debug_secrets.py  docker-compose.yml  env_file.example  final_validation.py  minimal_dashboard.py  pyproject.toml  requirements.txt  simple_debug.py  streamlit_app.py  streamlit_cloud_app.py  supabase_complete_schema.sql  test_artist_trends_fix.py  test_dashboard_fix.py  test_dashboard_fixes.py  test_data_functions.py  test_live_dashboard.py  test_new_dashboard_sections.py  test_performance_comparison.py  validate_dashboard_fixes.py  validate_fix.py  validate_improved_fix.py  youtube_comments_cleaned.csv
.streamlit/: config.toml  secrets.toml  secrets.toml.template
api/: Dockerfile  config.py  main.py  pyproject.toml  reddit.py  reddit_init.py  track_fetched_data.py  updates_youtube_comments_from_fetched.py  verify_config.py  youtube.py  youtube_quota.py
dags/: llm_reddit_processing_dag.py  llm_youtube_processing_dag.py  setup_airflow_pools.py
dashboard/: .dockerignore  DBT_CLEANUP_ANALYSIS.md  Dockerfile  GET_LUCKY_IMPLEMENTATION.md  README.md  __init__.py  ai_intelligence_center.py  ai_intelligence_center_backup.py  ai_intelligence_center_clean.py  artist_analytics_hub.py  dashboard.py  dashboard_enhanced.py  dashboard_original.py  dashboard_original_backup.py  dashboard_pages.py  data_manager.py  data_manager_clean.py  data_queries.py  database_service.py  enhanced_genre_analysis.py  fill_missing_temporal_trends.py  get_lucky_youtube_patch.py  main_dashboard.py  pyproject.toml  test_dashboard_data.py  ui_components.py  ui_library.py  visualizations.py  youtube_search.py
dashboard_online/: Dockerfile  __init__.py  ai_intelligence_center.py  artist_analytics_hub.py  config_online.py  dashboard_pages.py  data_manager.py  database_service.py  enhanced_genre_analysis.py  fix_cached_functions.py  get_lucky_youtube_patch.py  main_dashboard.py  pyproject.toml  ui_components.py  ui_library.py  youtube_search.py
data_pipeline/: README.md  extract_cleaned_comments.py  extract_cleaned_comments_by_date.py  extract_cleaned_comments_by_date_README.md  extract_cleaned_data_full.py  fill_missing_temporal_trends.py  fix_youtube_headers.py  generate_wordcloud_text.py  init_db.py  load_analytics_auto.py  load_analytics_data.py  load_json_to_postgres.py  run_complete_pipeline.py  run_sentiment_pipeline.py  run_specific_entity_extraction.py  test_minimal.py  translate_comment_jp_to_en.py  translate_comment_jp_to_en2.py  translate_comment_jp_to_en_MARIANMT.py  translate_comment_jp_to_en_NLLB.py  translate_youtube_comments.py  translate_youtube_comments_README.md  translate_youtube_comments_USAGE.md  translate_youtube_comments_optimized.py  verify_analytics_load.py
dbt_social_media_tracker/: .user.yml  dbt_project.yml  profiles.yml
doc/: overview.md
llm_enrichment/: CLEANUP_RESULTS.md  LLM_USAGE_ANALYSIS.md  README.md  __init__.py  cleanup_unused_llm_modules.sh
scripts/: backup_database.sh  entrypoint.sh  import_pipeline_data.sh  load_analytics_auto.py  migrate_database.py  migrate_essential_tables.py  restore_database.sh  test_db_clearing.sh  verify_analytics_load.py
test/: __init__.py
(+153 files in other folders)
