[tool.poetry]
name = "Social Media Tracker"
version = "0.1.0"
description = "Social Media Sentiment Tracker for Global Trends"
authors = ["F. Bossart <florent.bossart@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.09,<3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
tweepy = "^4.15.0"
python-dotenv = "^1.1.0"
praw = "^7.8.1"
requests = "^2.32.3"
google-api-python-client = "^2.169.0"
sqlalchemy = ">=1.4.36,<2.0"
pandas = "1.5.3"
numpy = "<1.27"
psycopg2-binary = "^2.9.10"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
apache-airflow-providers-sqlite = "^4.0.0"
dockerfile = "^3.3.1"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["optional: not required, nor saved in test_output.txt"]
